# sentinel-suisse

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt
.github/workflows/: deploy.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_user_api_token.py  003_alerts_log_dedup.py  004_pii_encryption.py  005_user_locale.py  006_listing_search_attrs.py  007_listing_country.py  008_user_is_premium.py  009_listing_under_construction.py  010_user_stripe_ids.py
deploy/: Caddyfile  README.md  backup-db.sh  docker-entrypoint.sh  monitor-health.sh  restore-db.sh  setup-firewall.sh
fixtures/: anibis_initial_state.json  anibis_sample.json  flatfox_initial_state.json  flatfox_sample.json  homegate_initial_state.json  homegate_sample.json  homegate_search_empty.html  immoscout_initial_state.json  immoscout_sample.json  indeed_fr_initial_state.json  indeed_fr_sample.json  jobs_initial_state.json  jobs_sample.json  jobup_initial_state.json  jobup_sample.json  leboncoin_initial_state.json  leboncoin_sample.json  newhome_initial_state.json  newhome_sample.json
frontend/: index.html  package-lock.json  package.json
scripts/: generate_admin_hash.py  generate_pii_key.py  setup-fase0.ps1
tests/: conftest.py  test_alert_dispatch.py  test_alert_matching.py  test_alert_templates.py  test_anibis_connector.py  test_billing.py  test_email_notifier.py  test_email_verification.py  test_entitlements.py  test_flatfox_connector.py  test_freemium_limits.py  test_health.py  test_homegate_connector.py  test_immoscout_connector.py  test_indeed_fr_connector.py  test_job_taxonomy.py  test_jobs_connector.py  test_jobup_connector.py  test_leboncoin_connector.py  test_listing_is_demo.py  test_newhome_connector.py  test_pii_encryption.py  test_privacy_policy.py  test_public_preview.py  test_public_signup.py  test_saved_search_isolation.py  test_subscribe_deeplink.py  test_terms_of_service.py  test_trusted_hosts.py  test_user_erasure.py  test_user_me.py  test_whatsapp_notifier.py  test_whatsapp_verification.py  test_whatsapp_webhook.py
(+186 files in other folders)
