[project]
name = "sentinel-suisse"
version = "0.1.0"
description = "Swiss housing and job listing aggregator with multi-channel alerts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "slowapi>=0.1.9,<1.0",
    "bcrypt>=4.0",
    "httpx>=0.28,<1.0",
    "email-validator>=2.0,<3.0",
    "cryptography>=44.0,<45.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/sentinel_suisse/api/**" = ["B008"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
